Feat: CRUD FIREBASE ANGULAR

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,45 @@
-/* You can add global styles to this file, and also import other style files */
+/* You can add global styles to this file, and also import other style files: pink-bluegrey purple-green deeppurple-amber indigo-pink*/
+@import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
+html, body{
+    height: 100%;
+}
+
+body{
+    margin-top: 0%;
+}
+
+.confirm-dialog-container #no-button{
+    height: 50px;
+    width: 50%;
+    background-color: #bd413a;
+    color:white;
+    border-radius: 0%
+}
+
+.confirm-dialog-container #yes-button{
+    height: 50px;
+    width: 50%;
+    background-color: #b6bece;
+    color:white;
+    border-radius: 0%
+}
+
+.confirm-dialog-container .mat-dialog-container{
+    border-radius: .25em .25em .4em .4em;
+}
+
+.confirm-dialog-container .content-container{
+    margin: 5px 5px 15px 5px;
+    color: #8f9cb5;
+    display: flex;
+}
+
+.confirm-dialog-container #close-icon{
+    margin-left: auto;
+    order: 2;
+    font-weight: bold;
+}
+
+.confirm-dialog-container #close-icon:hover{
+   cursor: pointer;
+}
